--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -36,16 +36,16 @@
   </style>
 </head>
 <body>
-  <h2>EVA Bridge v3.0</h2>
+  <h2>EVA Bridge v3.1</h2>
   <div class="row">
     <span class="label">IDE (localhost)</span>
     <span id="ide-status" class="status offline">—</span>
   </div>
   <div class="row">
-    <span class="label">Gemini (aba)</span>
-    <span id="gemini-status" class="status offline">—</span>
+    <span class="label">AI Studio (aba)</span>
+    <span id="aistudio-status" class="status offline">—</span>
   </div>
-  <p class="hint">Abra a IDE em localhost:3000 e o Gemini em gemini.google.com para conectar.</p>
+  <p class="hint">Abra a IDE em localhost:3000 e o AI Studio em aistudio.google.com para conectar.</p>
   <script src="popup.js"></script>
 </body>
 </html>
